b2c azure resource server

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://kism3tco.b2clogin.com/kism3tco.onmicrosoft.com/discovery/v2.0/keys?p=b2c_1_signupandsignin
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://kism3tco.b2clogin.com/6232822a-f99a-4832-8228-13f27fb27984/v2.0/
+spring.security.oauth2.resourceserver.jwt.jws-algorithms=RS256
+
+logging.level.org.springframework.security=DEBUG
